# celery_playground

./: .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: base_ci_cd.yml
demo_app/: basic_canvas.py  tasks.py
django_celery_pg/: __init__.py  asgi.py  celery.py  settings.py  settings_celery.py  urls.py  wsgi.py
docs/: install.md
